@@ -58,8 +58,6 @@ def svn_checkout (url, location, username=None, password=None):
     subprocess.call (cmd)
 
 def generate_configure_bat (prefix, abspath):
-    batfile = abspath + "/configure.bat"
-
     #Creating string template for .mwc file
     template = Template ("""@rem This file was generated by:
 @rem ${command_line}
@@ -121,6 +119,7 @@ def generate_configure_bat (prefix, abspath):
                 'command_line' : ",".join (sys.argv).replace (",", " ")}
 
     # Write the configuration file.
+    batfile = prefix + "/configure.bat"
     file = open (batfile, "w")
     file.write (template.substitute (params))
     file.close ()
@@ -194,7 +193,7 @@ export LD_LIBRARY_PATH=\$LD_LIBRARY_PATH/lib:\$BOOST_ROOT/lib
                 'command_line' : ",".join (sys.argv).replace (",", " ")}
 
     # Write the configuration file.
-    shfile = abspath + "/configure.sh"
+    shfile = prefix + "/configure.sh"
     file = open (shfile, "w")
     file.write (template.substitute (params))
     file.close ()
